--- a/Launcher/Launcher/Launcher.vbproj
+++ b/Launcher/Launcher/Launcher.vbproj
@@ -186,10 +186,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\JunctionPoints\JunctionPoints.csproj">
-      <Project>{c9076a7c-d890-45da-8cbe-80958d781af7}</Project>
-      <Name>JunctionPoints</Name>
+    <ProjectReference Include="..\ReparsePointLibrary\HelperLibrary.csproj">
+      <Project>{e84d866b-4176-4444-a2ab-ce820001ae4a}</Project>
+      <Name>HelperLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
