--- a/Launcher/ReparsePointLibrary/HelperLibrary.csproj
+++ b/Launcher/ReparsePointLibrary/HelperLibrary.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C9076A7C-D890-45DA-8CBE-80958D781AF7}</ProjectGuid>
+    <ProjectGuid>{E84D866B-4176-4444-A2AB-CE820001AE4A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JunctionPoints</RootNamespace>
-    <AssemblyName>JunctionPoints</AssemblyName>
+    <RootNamespace>HelperLibrary</RootNamespace>
+    <AssemblyName>HelperLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,7 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JunctionPoints.cs" />
+    <Compile Include="FileActions.cs" />
+    <Compile Include="ReparsePoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
