--- a/Launcher/ReparsePointLibrary/HelperLibrary.csproj
+++ b/Launcher/ReparsePointLibrary/HelperLibrary.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E84D866B-4176-4444-A2AB-CE820001AE4A}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HelperLibrary</RootNamespace>
     <AssemblyName>HelperLibrary</AssemblyName>
@@ -28,6 +28,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>HelperLibrary.ReparsePoint</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
