--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,9 @@ configuration:
 build:
   verbosity: normal
 
+after_build:
+  - md LauncherRelease
+  - robocopy *.exe *.dll "%CD%\Launcher\Launcher\bin\Release" "%CD%\LauncherRelease"
+  - echo %CD%
 artifacts:
-  - path: Launcher\Launcher\bin\Release
+  - path: LauncherRelease
