--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,8 @@ build:
 
 after_test:
   - md LauncherRelease
-  - (robocopy *.exe *.dll "%CD%\Launcher\Launcher\bin\Release" "%CD%\LauncherRelease") ^& exit 0
+  - xcopy "%CD%\Launcher\Launcher\bin\Release\*.exe" "%CD%\LauncherRelease" /y
+  - xcopy "%CD%\Launcher\Launcher\bin\Release\*.dll" "%CD%\LauncherRelease" /y
   
 artifacts:
   - path: LauncherRelease
