--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Launcher.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+    <userSettings>
+        <Launcher.My.MySettings>
+            <setting name="LocalVersion" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Verbose" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Arguments" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SaveOutput" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="OutputPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UserKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UserID" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UploadTime" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HasChanged" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+        </Launcher.My.MySettings>
+    </userSettings>
 </configuration>
