--- a/Launcher/ReparsePointLibrary/HelperLibrary.csproj
+++ b/Launcher/ReparsePointLibrary/HelperLibrary.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,12 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandLineArgs.cs" />
-    <Compile Include="FileActions.cs" />
-    <Compile Include="IniConfiguration.cs" />
-    <Compile Include="ReparsePoint.cs" />
+    <Compile Include="Classes\OpenRCT2Config.cs" />
+    <Compile Include="Utils\CommandLineArgs.cs" />
+    <Compile Include="Utils\FileActions.cs" />
+    <Compile Include="Utils\IniConfiguration.cs" />
+    <Compile Include="Utils\ReparsePoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextReaderExtensions.cs" />
+    <Compile Include="Utils\TextReaderExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
