Moved all OpenRCTdotNet stuff to one namespace Added a OpenRCTdotNetWebActions for all the API interaction. Moved the API secret to the settings file Fixed some namepaces Added settings for SaveGames

--- a/Launcher/Launcher/Launcher.vbproj
+++ b/Launcher/Launcher/Launcher.vbproj
@@ -106,7 +106,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.vb" />
+    <Compile Include="OpenRCT2Config.vb" />
     <Compile Include="Forms\Extras.Designer.vb">
       <DependentUpon>Extras.vb</DependentUpon>
     </Compile>
@@ -154,6 +154,8 @@
     <Compile Include="Forms\Options.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="OpenRCTdotNet\OpenRCTdotNetUser.vb" />
+    <Compile Include="OpenRCTdotNet\OpenRCTdotNetWebActions.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Forms\Extras.resx">
