Swapped out Logo for one that makes more sense.

--- a/Launcher/Launcher/Launcher.vbproj
+++ b/Launcher/Launcher/Launcher.vbproj
@@ -226,6 +226,9 @@
       <Name>HelperLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
     <PostBuildEvent>
