Opening Extra's doesn't nag if you dont have RCT1 installed (only shows first time.)

--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -46,6 +46,9 @@
             <setting name="OpenRCTdotNetSaveGames" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="OptionsDialogRCT1" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Launcher.My.MySettings>
     </userSettings>
     <applicationSettings>
