--- a/Launcher/Launcher/My Project/Settings.settings
+++ b/Launcher/Launcher/My Project/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="OpenRCTdotNetSaveGames" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="OptionsDialogRCT1" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
