Added option to turn off updates

--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -49,6 +49,15 @@
             <setting name="OptionsDialogRCT1" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="CheckUpdates" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="InstallUpdates" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CheckLauncher" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Launcher.My.MySettings>
     </userSettings>
     <applicationSettings>
