Added a Donate Button, Fixed OneClick Deployments

--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -58,6 +58,12 @@
             <setting name="CheckLauncher" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ShowDonateUser" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Donator" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Launcher.My.MySettings>
     </userSettings>
     <applicationSettings>
