Now caches played time if no internet is available

--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -64,6 +64,9 @@
             <setting name="Donator" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="OpenRCTdotNetPlaytimeCache" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Launcher.My.MySettings>
     </userSettings>
     <applicationSettings>
