--- a/Launcher/Launcher/Launcher.vbproj
+++ b/Launcher/Launcher/Launcher.vbproj
@@ -262,6 +262,12 @@
   <ItemGroup>
     <None Include="Resources\offline.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\index_openrct2_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\login_screen.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
     <PostBuildEvent>
