Renamed some Variables, Added ability to change from Develop to Stable.

--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -64,6 +64,9 @@
             <setting name="OpenRCTdotNetPlaytimeCache" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="DownloadDevelop" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Launcher.My.MySettings>
     </userSettings>
     <applicationSettings>
