--- a/Launcher/Launcher/My Project/Settings.settings
+++ b/Launcher/Launcher/My Project/Settings.settings
@@ -56,5 +56,8 @@
     <Setting Name="OpenRCTdotNetPlaytimeCache" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="DownloadDevelop" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
