Now asks user on first run if they want Develop or Stable.

--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -65,7 +65,10 @@
                 <value>0</value>
             </setting>
             <setting name="DownloadDevelop" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
+            </setting>
+            <setting name="FirstRun" serializeAs="String">
+                <value>True</value>
             </setting>
         </Launcher.My.MySettings>
     </userSettings>
