--- a/Launcher/Launcher/My Project/Settings.settings
+++ b/Launcher/Launcher/My Project/Settings.settings
@@ -57,7 +57,10 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="DownloadDevelop" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="FirstRun" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
